    computation with extremely low probability, for unnormalised
    dividends. The bug might also result in a decrement of memory above
    dividends, with some potential security impact. The bug might affect
    several user-level routines, e.g., mpz_invert, but only for operands
    of at least 3000 bits (for smaller operands, a simpler algorithm is
    used).

 -- Steve M. Robbins <smr@debian.org>  Mon, 29 Aug 2011 20:58:05 -0500

gmp (2:5.0.1+dfsg-7) unstable; urgency=low

  [ Peter Pearse ]
  * For cross builds, strip GNU_TYPES & pass --target.  Closes: #605038.

  [ Steve Langasek ]
  * We don't need to use $(strip), just avoid having whitespace in the first
    place.
  * For that matter, this s/i386/i486/ substitution is entirely unnecessary
    to begin with; the DEB_HOST_GNU_TYPE is already i486 on Debian, and i686
    on Ubuntu.  So as long as we're modifying this line, let's simplify it
    some more.

  [ Steve Robbins ]
  * control: Make libgmp-dev, and lib{32,64}-dev real packages, providing
    virtual packages libgmp10-dev, etc.  Add real package libgmp3-dev, a
    dummy package to pull in libgmp-dev.  Required to ease transition of
    mlton because it build-depends on itself and on versioned libgmp3-dev.
    See http://lists.debian.org/debian-release/2011/03/msg00374.html.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 22 Mar 2011 22:00:03 -0500

gmp (2:5.0.1+dfsg-6) unstable; urgency=low

  * control: libgmp10-dev provides the old libgmp3-dev package.  This is a
    temporary measure to ease the transition for ghc, which build-depends
    on itself as well as libgmp3-dev; c.f.
    http://lists.debian.org/debian-haskell/2011/03/msg00013.html

 -- Steve M. Robbins <smr@debian.org>  Sun, 06 Mar 2011 09:38:56 -0600

gmp (2:5.0.1+dfsg-5) unstable; urgency=low

  * Merge the v5 branch back to trunk.

  * Package libgmp10-dev also provides libgmp-dev so you can build-depend
    on an unversioned GMP -dev package.
  